# mantid

.github/workflows/: codeql-analysis.yml
Framework/Algorithms/: CMakeLists.txt
Framework/DataHandling/: CMakeLists.txt
Framework/Doxygen/: make_header.py
Framework/Examples/: PropertyAlgorithm.cpp
Framework/Kernel/: CMakeLists.txt
Framework/Properties/: Mantid.properties.template
MantidPlot/: mantidplot.py  mantidplotrc.py
MantidPlot/ipython_widget/: __init__.py  mantid_ipython_widget.py
MantidPlot/pymantidplot/: __init__.py  proxies.py  qtiplot.py
MantidPlot/src/: ApplicationWindow.cpp  ApplicationWindow.h  AssociationsDialog.cpp  AssociationsDialog.h  AxesDialog.cpp  AxesDialog.h  BoxCurve.h  ColorMapDialog.cpp  ColorMapDialog.h  ConfigDialog.cpp  ConfigDialog.h  CurveRangeDialog.cpp  CurveRangeDialog.h  CurvesDialog.cpp  CurvesDialog.h  CustomActionDialog.cpp  CustomActionDialog.h  DataSetDialog.cpp  DataSetDialog.h  ErrDialog.cpp  ErrDialog.h  ExpDecayDialog.cpp  ExpDecayDialog.h  ExportDialog.cpp  ExportDialog.h  FFTDialog.cpp  FFTDialog.h  FilterDialog.cpp  FilterDialog.h  FindDialog.cpp  FindDialog.h  FitDialog.cpp  FitDialog.h  FloatingWindow.cpp  FloatingWindow.h  FunctionCurve.cpp  FunctionCurve.h  FunctionDialog.cpp  FunctionDialog.h  Graph.cpp  (+77 more)
MantidPlot/test/: MantidPlotInputArgsCheck.py  MantidPlotMatplotlibTest.py  mantidplottests.py
Testing/PerformanceTests/: analysis_mpl.py  sqlresults.py
buildconfig/: class_maker.py
buildconfig/CMake/: Bootstrap.cmake  FindLib3mf.cmake  FindPyQt.py  MSVCSetup.cmake
docs/source/: conf.py
instrument/: Facilities.xml  HB2B_Definition.xml
qt/widgets/: CMakeLists.txt
qt/widgets/custominstrumentview/: CMakeLists.txt
qt/widgets/custominstrumentview/inc/MantidQtWidgets/CustomInstrumentView/: BaseInstrumentModel.h  DllOption.h
qt/widgets/custominstrumentview/src/: BaseInstrumentModel.cpp
scripts/: BilbyCustomFunctions_Reduction.py  DGSPlanner.py  DGS_Reduction.py  Elemental_Analysis.py  Engineering_Diffraction.py  FilterEvents.py  Frequency_Domain_Analysis.py  Frequency_Domain_Analysis_Old.py  HFIR_4Circle_Reduction.py  MSlice.py  Merge_Detector_Banks.py  Muon_Analysis.py  ORNL_SANS.py  Powder_Diffraction_Reduction.py  QECoverage.py  SliceViewAnimator.py  TofConverter.py  plotting_test.py  pythonTSV.py  reducer_singleton.py
scripts/AbinsModules/: AbinsConstants.py  AbinsData.py  AbinsTestHelpers.py  AtomsData.py  CalculateDWSingleCrystal.py  CalculatePowder.py  CalculateS.py  CalculateSingleCrystal.py  DWSingleCrystalData.py  FrequencyPowderGenerator.py  GeneralAbInitioParser.py  GeneralAbInitioProgram.py  GeneralData.py  GeneralLoadAbInitioTester.py  IOmodule.py  InstrumentProducer.py  KpointsData.py  LoadCASTEP.py  LoadCRYSTAL.py  LoadDMOL3.py  LoadGAUSSIAN.py  PowderData.py  SData.py  SPowderSemiEmpiricalCalculator.py  SingleCrystalData.py  __init__.py
scripts/Calibration/: tube.py  tube_calib.py  tube_calib_fit_params.py  tube_spec.py
scripts/CrystalTools/: PeakReport.py
scripts/DGSPlanner/: ClassicUBInputWidget.py  DGSPlannerGUI.py  DimensionSelectorWidget.py  InstrumentSetupWidget.py  LoadNexusUB.py  MatrixUBInputWidget.py  ValidateOL.py
scripts/DiamondAttenuationCorrection/: FitTrans.py  FitTransReadUB.py  UBMatrixGenerator.py
scripts/Engineering/: EnggUtils.py  EnginX.py
scripts/ErrorReporter/: error_dialog_app.py  error_report_presenter.py  errorreport.py
scripts/FilterEvents/: eventFilterGUI.py
scripts/HFIR_4Circle_Reduction/: FindUBUtility.py  IntegrateSingePtSubWindow.py  NTableWidget.py  PeaksIntegrationReport.py  absorption.py  detector2dview.py  fourcircle_utility.py  fputility.py  guiutility.py  hfctables.py  integratedpeakview.py  message_dialog.py  mpl2dgraphicsview.py  mplgraphicsview.py  mplgraphicsview3d.py  multi_threads_helpers.py  optimizelatticewindow.py  peak_integration_utility.py  peakprocesshelper.py  plot3dwindow.py  process_mask.py  project_manager.py  reduce4circleControl.py  reduce4circleGUI.py  refineubfftsetup.py  viewspicedialog.py
tools/: skipped_systemtests.py
(+5244 files in other folders)
